Fix grid spacing

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -80,7 +80,7 @@
     }
 }
 
-.droopy-3x3-grid {
+.droopy-3x3-grid--skinny {
     @include respond-up(md) {
         @include respond-down(lg) {
             .tile:nth-child(2n+1) {
